SERVER-16724: fix syncSizeStorer